# CompileHell

./: .gitignore  Makefile  build.sh  build_and_run.bat  demo  demo.c  demo.py  game.py  object_builder.py  project_launcher.py  resource_parser_test.py  scene.resxx  scene_loader.py  test.resxx
.user/: xor.key
android/: Android.mk  AndroidManifest.xml  CMakeLists.txt  build.gradle  main.cpp  settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
cppcompilehell/: editor.cpp  engine.hpp  entity.hpp  game.cpp  main.cpp  resource_lib.hpp
engine_src/: compilehell.c  compilehell.h
pyCompileHell/: __init__.py  engine.py  entity.py  scene_loader.py
pycompilehell/: engine.py  entity.py  exemplo.py  look here.txt  resource_lib.py
pycompilehell/autenticat/: __init__.py  core.py
pycompilehell/autenticat/autenticat.egg-info/: PKG-INFO  requires.txt
scenes/: scene1.resxx
tools/: exemplo.py
tools/autenticat/: __init__.py  core.py  security.py  setup.py  utils.py
tools/autenticat/autenticat.egg-info/: SOURCES.txt
